Day 11: Simple theme, layout fixes, etc
Fixed the layout issues in safari
Simplified the design colors for now: the funky colors were too much.
Update the header and some links

--- a/components/layout/PageLayout.module.scss
+++ b/components/layout/PageLayout.module.scss
@@ -39,13 +39,14 @@
 }
 
 .pageHeader {
-    background-color: rgba(0, 0, 255, 0.5);
+    background-color: black;
+    color: white;
     display: flex;
     flex-grow: 1;
 }
 
 .pageContentWrapper {
-    min-width: calc(((1/1.618) * 100%) - 1rem);
+    min-width: calc(((1 / 1.618) * 100%) - 1rem);
     flex-basis: 0;
     flex-grow: 999;
     display: flex;
@@ -53,37 +54,49 @@
 }
 
 .pageContent {
-    background-color: rgba(255, 255, 0, 0.9);
-    background-image: url(/squiggle.svg);
+    height: 100%;
+    border: 3px solid black;
     flex-grow: 999;
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     &::before,
     &::after {
-        content: "";
+        content: '';
         display: block;
-        flex: 0 1 auto;
     }
-    &::before { height: calc(3/8 * 100%); }
-    &::after { height: calc(5/8 * 100%) }
+    &::before {
+        height: calc(3 / 8 * 100%);
+    }
+    &::after {
+        height: calc(5 / 8 * 100%);
+    }
 }
 
 .contentArea {
     width: 100%;
-    background-color: rgba(255,255,255,0.96);
     padding: 2rem;
 
     max-width: 72ch;
     margin: 0 auto;
-    & > *:first-child { margin-top: 0; }
-    & > *:last-child { margin-bottom: 0; }
+    & > *:first-child {
+        margin-top: 0;
+    }
+    & > *:last-child {
+        margin-bottom: 0;
+    }
 }
 
 .pageFooter {
-    background-color: rgba(255, 0, 0, 0.5);
-    & > *:first-child { margin-top: 0; }
-    & > *:last-child { margin-bottom: 0; }
+    background-color: black;
+    color: white;
+    & > *:first-child {
+        margin-top: 0;
+    }
+    & > *:last-child {
+        margin-bottom: 0;
+    }
 }
