--- a/components/page/Header.module.scss
+++ b/components/page/Header.module.scss
@@ -1,32 +1,41 @@
-
 .pageHeader {
-  text-align: center;
-  height: 100%;
-  padding: 1rem;
-  max-height: calc(100vh - 2 * 1rem);
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-  }
-  &::before {
-    height: calc((2/8) * 100%);
-  }
-  &::after {
-    height: calc((6/8) * 100%);
-  }
+    text-align: center;
+    height: 100%;
+    padding: 1rem;
+    max-height: calc(100vh - 2 * 1rem);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    &::before,
+    &::after {
+        content: '';
+        display: block;
+    }
+    &::before {
+        height: calc((2 / 8) * 100%);
+    }
+    &::after {
+        height: calc((6 / 8) * 100%);
+    }
+
+    a {
+        color: white;
+    }
 }
 
 .logoEmoji {
-  font-size: 6rem;
-  text-decoration: none;
+    font-size: 6rem;
+    text-decoration: none;
 }
 
-.headerContentWrapper {
+.divider {
+    display: block;
+    margin-bottom: 1rem;
 }
+
+// .headerContentWrapper {
+// }
 
 .pageNavigation {
     display: block;
